# term-snip

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml
examples/: clear.rs  five.rs  long_lines.rs
src/: lib.rs  termwrap.rs
