[package]
name = "term-snip"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/sorcerersr/term-snip"
homepage = "https://gitlab.com/sorcerersr/term-snip"
keywords = ["cli", "terminal", "console"]
authors = ["Stefan Rabmund <sorcerersr@mailbox.org>"]
readme = "README.md"
edition = "2018"

[dependencies]
console = "0.14.1"