[package]
name = "term-snip"
version = "0.1.8"
license = "MIT OR Apache-2.0"
description = "Write limited number of lines to terminal"
repository = "https://github.com/sorcerersr/term-snip"
keywords = ["cli", "terminal", "console"]
categories = ["command-line-utilities"]
authors = ["Stefan Rabmund <sorcerersr@mailbox.org>"]
readme = "README.md"
edition = "2018"
exclude = [
    "screenshot",
]

[dependencies]
console = "0.16.1"

[dev-dependencies]
mockall = "0.13.1"
